@@ -32,6 +32,7 @@ lib/TAP/Parser/Result/YAML.pm
 lib/TAP/Parser/Source.pm
 lib/TAP/Parser/Source/Perl.pm
 lib/TAP/Parser/YAMLish/Reader.pm
+lib/TAP/Parser/YAMLish/Writer.pm
 Makefile.PL
 MANIFEST
 META.yml
@@ -54,6 +55,7 @@ t/120-harness.t
 t/130-source.t
 t/140-results.t
 t/150-yamlish.t
+t/160-yamlish-writer.t
 t/compat/00compile.t
 t/compat/failure.t
 t/compat/inc_taint.t
