@@ -44,6 +44,8 @@ Revision history for TAP-Parser
     - Removed T::P::YAML
     - Added raw source capture to T::P::YAMLish
     - Added support for double quoted hash keys
+    - Added TAP::Parser::YAMLish::Writer and renamed T::P::YAMLish as
+      T::P::YAMLish::Reader.
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
